// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application-status should match the snapshot with custom status 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon-stub
    class="application-status__icon application-status__icon--?"
  />
   
  <!---->
</div>
`;

exports[`application-status should match the snapshot with status DOWN 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon-stub
    class="application-status__icon application-status__icon--DOWN"
    icon="times-circle"
  />
   
  <!---->
</div>
`;

exports[`application-status should match the snapshot with status OFFLINE 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon-stub
    class="application-status__icon application-status__icon--OFFLINE"
    icon="minus-circle"
  />
   
  <!---->
</div>
`;

exports[`application-status should match the snapshot with status OUT_OF_SERVICE 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon-stub
    class="application-status__icon application-status__icon--OUT_OF_SERVICE"
    icon="ban"
  />
   
  <!---->
</div>
`;

exports[`application-status should match the snapshot with status RESTRICTED 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon-stub
    class="application-status__icon application-status__icon--RESTRICTED"
    icon="exclamation"
  />
   
  <!---->
</div>
`;

exports[`application-status should match the snapshot with status UNKNOWN 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon-stub
    class="application-status__icon application-status__icon--UNKNOWN"
    icon="question-circle"
  />
   
  <!---->
</div>
`;

exports[`application-status should match the snapshot with status UP with Timestamp 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon-stub
    class="application-status__icon application-status__icon--UP"
    icon="check"
  />
   
  <small>
    14m
  </small>
</div>
`;
